refactor: simplify enum accessors by using Lombok's @Getter annotation